# luavela

./: .clang-format  .gitattributes  .gitignore  .luacheckrc  .readthedocs.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTORS  COPYRIGHT  ChangeLog  INSTALL  INSTALL.rst  LICENSE  README  README.rst
src/: CMakeLists.txt  lauxlib.h  lextlib.h  libujit.map  lj_bc.c  lj_bc.h  lj_bcdump.h  lj_bcins.h  lj_debug.c  lj_debug.h  lj_def.h  lj_frame.h  lj_gc.c  lj_gc.h  lj_obj.h  lj_tab.c  lj_tab.h  lj_vm.h  lua.h  lua.hpp  luaconf.h  luajit.c  luajit.h  lualib.h  uj_arch.h  uj_capi.c  uj_capi_aux.c  uj_capi_ext.c  uj_capi_impl.h  uj_cframe.h  uj_coverage.c  uj_coverage.h  uj_cstr.c  uj_cstr.h  uj_dispatch.c  uj_dispatch.h  uj_dwarf.c  uj_err.c  uj_err.h  uj_errmsg.c  (+56 more)
src/cli/: opt.c  opt.h
src/dump/: uj_dump_bc.c  uj_dump_datadef.c  uj_dump_datadef.h  uj_dump_datadef_regs_x86.h  uj_dump_iface.h  uj_dump_ir.c  uj_dump_mcode.c  uj_dump_progress.c  uj_dump_progress.h  uj_dump_stack.c  uj_dump_utils.c  uj_dump_utils.h
src/ffi/: lj_carith.c  lj_carith.h  lj_ccall.c  lj_ccall.h  lj_ccallback.c  lj_ccallback.h  lj_cconv.c  lj_cconv.h  lj_cdata.c  lj_cdata.h  lj_clib.c  lj_clib.h  lj_cparse.c  lj_cparse.h  lj_crecord.c  lj_crecord.h  lj_ctype.c  lj_ctype.h
src/frontend/: lj_bcread.c  lj_bcwrite.c  lj_lex.c  lj_lex.h  lj_parse.c  lj_parse.h
src/host/: README  buildvm.c  buildvm.h  buildvm_asm.c  buildvm_fold.c  buildvm_lib.c  genminilua.lua  minilua.c
src/jit/: lj_asm.c  lj_asm.h  lj_asm_x86.h  lj_ffrecord.c  lj_ffrecord.h  lj_ir.c  lj_ir.h  lj_ircall.h  lj_iropt.h  lj_jit.h  lj_mcode.c  lj_mcode.h  lj_record.c  lj_record.h  lj_snap.c  lj_snap.h  lj_target.h  lj_target_x86.h  lj_trace.c  lj_trace.h  lj_traceerr.h  uj_record_indexed.c  uj_record_indexed.h
src/jit/emit/: emit_gl.h  emit_iface.h  lj_emit.c  lj_emit_x86.h  uj_emit_ct.c  uj_emit_ct.h  uj_emit_sse2.c  uj_emit_sse2.h
src/jit/opt/: dce.c  fold.c  loop.c  mem.c  movtv.c  narrow.c  sink.c
src/jit/opt_x86/: fold_ins.c  opt_x86_iface.h
src/lib/: base.c  bit.c  debug.c  ffi.c  init.c  io.c  jit.c  math.c  os.c  package.c  string.c  table.c  ujit.c
src/profile/: uj_iprof.c  uj_iprof_iface.h  uj_memprof.c  uj_memprof_iface.h  uj_profile.c  uj_profile_iface.h  uj_profile_impl.h  uj_profile_so.c  uj_profile_so.h  uj_profile_stream.c  uj_symtab.c  uj_symtab.h  ujp_write.c  ujp_write.h
src/utils/: cpuinfo.c  cpuinfo.h  fp.c  fp.h  jemalloc.c  leb128.c  leb128.h  lj_alloc.c  lj_char.c  lj_char.h  random.c  random.h  str.c  str.h  strhash.h  strscan.c  strscan.h  uj_alloc.h  uj_crc.c  uj_crc.h  uj_math.c  uj_math.h  uj_vmmath.c  x86_inslen.c  x86_inslen.h
src/utils/strhash/: city.c  luajit2.c  murmur3.c
tests/: CMakeLists.txt  gen_benchmark_data.sh  perftest.pl  run_api_benchmarks.sh  run_benchmarks.sh  run_suite_common.sh
tests/impl/: CMakeLists.txt
tests/impl/Lua-5.1-tests/: CMakeLists.txt  README.md  Sources.cmake  run_tests.sh
tests/impl/Lua-5.1-tests/suite/: big.lua  closure.lua  db.lua  errors.lua  events.lua  literals.lua  main.lua  strings.lua  vararg.lua
tests/impl/LuaJIT-tests/: CMakeLists.txt  README.md  Sources.cmake  run_tests.sh
tests/impl/uJIT-tests-C/: CMakeLists.txt  README.md  Sources.cmake  run_tests.sh
tests/impl/uJIT-tests-C/suite/: CMakeLists.txt  test_api_args.c  test_bottom_dummy.c  test_cci_immutable.c  test_common.h  test_common_lua.h  test_concat_and_gc.c  test_crc.c  test_cstr.c  test_emit_sse2.c  test_errmem.c  test_example.c  test_ext_events.c  test_gc_traversal_mm.c  test_gc_traverse_stack.c  test_jitpairs.c  test_leb128.c  test_lua_alloc.c  test_lua_concat.c  test_lua_coverage.c  test_lua_debug.c  test_lua_equal.c  test_lua_getfield.c  test_lua_gettable.c  test_lua_hotcnt.c  test_lua_iprof.c  test_lua_lessthan.c  test_lua_setfield.c  test_lua_settable.c  test_lua_timeout.c  test_lua_yield.c  test_luae_createstate.c  test_luae_deepcopy.c  test_luae_immutable.c  test_luae_iterate.c  test_luae_requiref.c  test_luae_seal.c  test_luae_table.c  test_lual_openlib.c  test_math_fold.c  (+9 more)
tests/impl/uJIT-tests-Lua/: CMakeLists.txt  README.md  Sources.cmake  run_tests.sh
tests/impl/uJIT-tests-Lua/suite/: api-extended.t  bit.t  cli-X.t  compiler-abs-neg.t  compiler-concat.t  compiler-getfenv.t  coverage.t  dump-compiler.t  dump-stack.t  dumpbc.t  errors.t  ffi.t  hotcnt.t  immutable.t  ir_indexed.t  jit-options.t  leb128.t  math.t  memprof.t  meta-comp.t  metrics-gc.t  metrics-snap-restores.t  metrics-strhash.t  movtv.t  neg-zero-for-step.t  os.t  pairs.t  profile-leaf.t  profile.t  seal.t  sink.t  string.t  table.t  usesfenv.t
tests/impl/uJIT-tests-smoke/: CMakeLists.txt  README.md  run_tests.sh
tests/iponweb/: README
tests/iponweb/perf/capi/: CMakeLists.txt  test_table_traversal.c
tests/iponweb/perf/chunks/: PARAM_x86_ujit.txt  class.lua  concat_int.lua  laurent.lua  rindex-builtin.lua  rindex-lua.lua  tf_idf.lua  tf_idf_corpus.lua
tests/iponweb/perf/lapi/: table.lua  utils.lua
tests/lang/: CMakeLists.txt
tests/lang/CERN-MAD-tests/: CMakeLists.txt  README.md  Sources.cmake  run_tests.sh
tests/lang/CERN-MAD-tests/suite/: luacore.lua  luagmath.lua  luaobject.lua  (+3 more)
tests/lang/lua-Harness/: CMakeLists.txt  README.md  Sources.cmake  run_tests.sh
tools/: CMakeLists.txt  ujit-analyze-dumps  ujit-gdb.py  ujit-mock-memprof.lua  ujit-parse-memprof
tools/mock_profile/: ujmp_main.c  ujmp_mock.c  ujmp_mock.h
tools/parse_memprof/: bufread.lua  main.lua  parse_memprof.lua  parse_symtab.lua  view_plain.lua
tools/parse_profile/: ujpp_callgraph.c  ujpp_callgraph.h  ujpp_demangle.c  ujpp_demangle.h  ujpp_demangle_lua.c  ujpp_demangle_lua.h  ujpp_elf.c  ujpp_elf.h  ujpp_hash.c  ujpp_hash.h  ujpp_main.c  ujpp_main.h  ujpp_output.c  ujpp_output.h  ujpp_parser.c  ujpp_parser.h  ujpp_read.c  ujpp_read.h  ujpp_state.c  ujpp_state.h  ujpp_table.c  ujpp_table.h  ujpp_utils.c  ujpp_utils.h  ujpp_vector.c  ujpp_vector.h
tools/tests/: memprof_parser.t  profiler_parser.t  profiler_parser_counters.t  profiler_parser_demangling.t  run_iponweb_tools_tests.sh
tools/tests/chunks/: payload.lua  xpcall.lua
(+705 files in other folders)
